fix: json dark mode colors and dict component button view (#3802)
* Fix dark mode colors on jsonView

* Fix dict component button view

* Changed style of dict component button

* Changed parameter render to remove space on the bottom of the inputs that are only handles

* Fixed space below nodes

--- a/src/frontend/src/style/classes.css
+++ b/src/frontend/src/style/classes.css
@@ -151,8 +151,18 @@ textarea[class^="ag-"]:focus {
   height: fit-content !important;
 }
 
-.json-view.dark {
-  background-color: #161c28 !important;
+.json-view {
+  height: 370px !important;
+  border-radius: 10px !important;
+  padding: 10px !important;
+}
+
+.json-view {
+  background-color: #f8fafc !important;
+}
+
+.dark .json-view {
+  background-color: #141924 !important;
 }
 
 .react-flow__node.dragging * {
